<resources>
    <string name="app_name">Fireo</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign Up</string>
    <string name="forgot_password">forget password</string>
    <string name="login">Login</string>
    <string name="qr_code">qr code</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="map">Map</string>
    <string name="places">Location</string>
    <string name="user">User</string>
    <string name="total_devices">Total Devices</string>
    <string name="devices_status">Devices Status</string>
    <string name="working_devices">Working Devices</string>
    <string name="faulty_devices">Faulty Devices</string>
    <string name="temperature">Heat</string>
    <string name="battery_low">Battery Low</string>
    <string name="network">Network</string>
    <string name="pressure">Pressure</string>
    <string name="device_id">Device ID :</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="logout">Logout</string>
    <string name="scan_text">Scan barcode on back of device to get more information </string>
    <string name="scan_the_qr_code">Scan The Qr Code</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="authorised_buildings_list">Authorised Buildings List</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="unfilter">Remove Filter</string>
    <string name="email_id">Email ID</string>
    <string name="user_id">User ID</string>
    <string name="authority">Authority</string>
    <string name="save">Save</string>
    <string name="error_string">An Error Occurred !! Please Try Again Later</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="data_not_synced">Data Not Synced! Please Try Again Later</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logout_content">Are you sure you want to logout ?</string>
    <string name="floor">Floor</string>
    <string name="ok">Okay</string>
    <string name="fault_type">Fault Type</string>
    <string name="generate_qr_code">generate device code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_error_string">Invalid Device Information !! Please Try Again</string>
    <string name="authority_text">\"Authority : \"</string>
    <string name="email_invalid">Wrong Format For Email</string>
    <string name="pass_invalid">Password must contain at least 7 characters</string>
    <string name="invalid_phone">Enter a valid phone number</string>
    <string name="invalid_info">Invalid Information</string>


</resources>
