<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient_back_img"
        android:elevation="5dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/fire_extinguisher_main"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/frameLayout_signUp"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/curved_bg"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/gradient_color1"
                android:drawablePadding="25dp"
                android:drawableTint="@color/gradient_color1"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="10dp"
                android:drawableStart="@drawable/drawable_size_user"
                android:textColorHint="@color/hint_color"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/gradient_color1"
                android:drawablePadding="25dp"
                android:drawableTint="@color/gradient_color1"
                android:hint="@string/phone_number"
                android:drawableStart="@drawable/drawable_size_phone"
                android:inputType="phone"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/hint_color"
                tools:ignore="Autofill" />


            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/gradient_color1"
                android:drawableStart="@drawable/drawable_size_user"
                android:drawablePadding="25dp"
                android:drawableTint="@color/gradient_color1"
                android:hint="@string/user_email"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/hint_color"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/pass_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/gradient_color1"
                android:drawableStart="@drawable/drawable_size_lock"
                android:drawablePadding="25dp"
                android:drawableTint="@color/gradient_color1"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/hint_color"
                tools:ignore="Autofill" />


        </LinearLayout>


    </FrameLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        android:src="@drawable/user_logo"
        android:tint="@color/gradient_color1"
        app:civ_shadow_color="#EFF5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout_signUp" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_anim"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="79dp"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>